--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>maven-lombok-plugin</artifactId>
+			<version>0.9.3.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
